[gd_scene load_steps=4 format=3 uid="uid://dlxaxbboe8gm"]

[ext_resource type="Script" uid="uid://dbp7lww68nmdx" path="res://Scripts/Objects/Tiles/Ladder_Top_Locker.gd" id="1_ru1kd"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(64, 4)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(16, 24)

[node name="Ladder_TopLocker" type="StaticBody2D" groups=["Climbable"]]
z_index = 1
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ru1kd")

[node name="ToFlip" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="Mask" type="CollisionShape2D" parent="."]
position = Vector2(32, 2)
shape = SubResource("1")
one_way_collision = true
debug_color = Color(0.577844, 0.121951, 0.0682051, 0.42)

[node name="Toggle_Checker" type="Area2D" parent="."]
position = Vector2(32, -24)
collision_layer = 0

[node name="Mask" type="CollisionShape2D" parent="Toggle_Checker"]
position = Vector2(0, 8)
shape = SubResource("2")
debug_color = Color(0.960784, 0.741176, 0.827451, 0.419608)

[connection signal="timeout" from="ToFlip" to="." method="_on_ToFlip_timeout"]
